# ethrex-db

./: .gitignore  Cargo.toml  README.md
benches/: benchmarks.rs  large_db_benchmarks.rs  store_benchmarks.rs  trie_comparison.rs
examples/: basic_usage.rs  blockchain_workflow.rs  memory_comparison.rs  merkle_trie.rs  quick_persistence_bench.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_merkle_trie.rs  fuzz_nibble_path.rs  fuzz_slotted_array.rs
proptest-regressions/data/: tests.txt
proptest-regressions/merkle/: tests.txt
src/: lib.rs
src/chain/: block.rs  blockchain.rs  mod.rs  world_state.rs
src/data/: mod.rs  nibble_path.rs  slotted_array.rs  tests.rs
src/merkle/: bloom.rs  mod.rs  node.rs  rlp_encode.rs  tests.rs  trie.rs
src/store/: db_address.rs  disk_mpt.rs  flat_store.rs  metrics.rs  mod.rs  page.rs  page_header.rs  page_types.rs  paged_db.rs  paged_flat_store.rs  proof_generator.rs  sparse_state_trie.rs  stack_trie.rs  subtree_cache.rs  trie_store.rs
tests/: eth_compatibility.rs  integration_tests.rs
