[package]
name = "ethrex_db"
version = "0.1.0"
edition = "2021"
description = "A Paprika-inspired Ethereum state storage engine for ethrex"
license = "MIT"

[dependencies]
memmap2.workspace = true
tiny-keccak.workspace = true
rlp.workspace = true
primitive-types.workspace = true
parking_lot.workspace = true
thiserror.workspace = true
wide = "0.7"  # Used in benchmarks for SIMD comparison
rayon.workspace = true

[dev-dependencies]
proptest = "1.4"
tempfile.workspace = true
hex.workspace = true
hex-literal = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"

[[bench]]
name = "benchmarks"
harness = false

[[example]]
name = "basic_usage"

[[example]]
name = "blockchain_workflow"

[[example]]
name = "merkle_trie"
