[package]
name = "ethrex_db"
version = "0.1.0"
edition = "2021"
description = "A Paprika-inspired Ethereum state storage engine for ethrex"
license = "MIT"

[dependencies]
memmap2 = "0.9"
tiny-keccak = { version = "2.0", features = ["keccak"] }
rlp = "0.5"
primitive-types = "0.12"
parking_lot = "0.12"
thiserror = "1.0"
tracing = "0.1"
wide = "0.7"  # Used in benchmarks for SIMD comparison
rayon = "1.8"
lru = "0.12"  # LRU page cache for performance
hashbrown = { version = "0.15", features = ["rayon"] }  # Faster HashMap with parallel iteration
rustc-hash = "2.1"  # FxHash - fast non-cryptographic hash for known-good keys

[dev-dependencies]
proptest = "1.4"
tempfile = "3.10"
hex = "0.4"
hex-simd = "0.8"
hex-literal = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
# For trie comparison benchmark
ethrex-trie = { git = "https://github.com/lambdaclass/ethrex", package = "ethrex-trie" }
ethrex-rlp = { git = "https://github.com/lambdaclass/ethrex", package = "ethrex-rlp" }
cita_trie = "4.0"
hasher = "0.1"

[[bench]]
name = "benchmarks"
harness = false

[[bench]]
name = "trie_comparison"
harness = false

[[bench]]
name = "store_benchmarks"
harness = false

[[bench]]
name = "large_db_benchmarks"
harness = false

[[example]]
name = "basic_usage"

[[example]]
name = "blockchain_workflow"

[[example]]
name = "merkle_trie"
