[package]
name = "ethrex_db"
version = "0.1.0"
edition = "2021"
description = "A Paprika-inspired Ethereum state storage engine for ethrex"
license = "MIT"

[dependencies]
# Memory-mapped file I/O
memmap2 = "0.9"
# Keccak-256 hashing
tiny-keccak = { version = "2.0", features = ["keccak"] }
# RLP encoding/decoding
rlp = "0.6"
# Primitive types (H256, U256)
primitive-types = { version = "0.13", default-features = false }
# Fast synchronization primitives
parking_lot = "0.12"
# Error handling
thiserror = "2.0"
# Logging
tracing = "0.1"
# SIMD (used in benchmarks)
wide = "0.7"
# Parallel computation
rayon = "1.10"
# LRU page cache
lru = "0.12"
# Faster HashMap with parallel iteration
hashbrown = { version = "0.15", features = ["rayon"] }
# FxHash - fast non-cryptographic hash for known-good keys
rustc-hash = "2.1"

[dev-dependencies]
proptest = "1.4"
tempfile = "3.8"
hex = "0.4"
hex-literal = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"

[[bench]]
name = "benchmarks"
harness = false

[[example]]
name = "basic_usage"

[[example]]
name = "blockchain_workflow"

[[example]]
name = "merkle_trie"
