[package]
name = "ethrex_db-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }

[dependencies.ethrex_db]
path = ".."

[[bin]]
name = "fuzz_nibble_path"
path = "fuzz_targets/fuzz_nibble_path.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_slotted_array"
path = "fuzz_targets/fuzz_slotted_array.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_merkle_trie"
path = "fuzz_targets/fuzz_merkle_trie.rs"
test = false
doc = false
bench = false
